sltax/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sltax-frontend
  namespace: sltax
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sltax-frontend
  template:
    metadata:
      labels:
        app: sltax-frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/heal23/sltax-frontend:latest
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: ghcr-creds
