sltax/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sltax-backend
  namespace: sltax
spec:
  selector:
    app: sltax-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
