sltax/frontemd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sltax-frontend
  namespace: sltax
spec:
  selector:
    app: sltax-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
