sltax/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sltax-ingress
  namespace: sltax
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: sltax.heal23.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sltax-frontend
                port:
                  number: 80
    - host: sltaxapi.heal23.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sltax-backend
                port:
                  number: 80
